# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
docs/: doc.md
sources/: main.cpp
